# gardener-ai

./: garden-visualizer.html  justfile  recipe.yaml
growkit-core/: .gitignore  pyproject.toml
growkit-core/src/growkit_core/: __init__.py  api.py  io.py  models.py  schema.py  validators.py
growkit-core/tests/: test_api.py  test_io.py  test_models.py  test_validators.py
growkit-mcp/: pyproject.toml
growkit-mcp/src/growkit_mcp/: server.py
growkit-web/: package.json  pnpm-lock.yaml
growkit-web/src/: App.tsx
growkit-web/src/components/: AgentInsights.tsx  GardenLayout.tsx  PlantingIcon.tsx  TaskList.tsx  TaskTimeline.tsx  ValidationCard.tsx
growkit-web/src/types/: growkit.ts
