[project]
name = "growkit-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Josh Floth", email = "flothjldev@proton.me" }]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.11.4"]

[project.scripts]
growkit-core = "growkit_core:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=src/growkit_core --cov-report=term-missing -ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-cov>=6.1.1"]
